force-app/main/default/objects/Quote/fields/Add_Technical_Specification__c.field-meta.xml
<CustomField>
    <fullName>Add_Technical_Specification__c</fullName>
    <label>Add Technical Specification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>