force-app/main/default/objects/Quote/fields/Grand_Total_FOP_Price__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_FOP_Price__c</fullName>
    <label>Grand Total FOP Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>