force-app/main/default/objects/Quote/fields/Total_Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Discount__c</fullName>
    <label>Total Customer Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>