force-app/main/default/objects/Quote/fields/Total_Customer_Discount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Discount_Formula__c</fullName>
    <label>Total Customer Discount Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>