force-app/main/default/objects/Quote/fields/Total_Unit_Basic__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Basic__c</fullName>
    <label>Total Unit Basic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>